commit after CRUD creation and Entities added: Customer, PizzaOrder and Product

--- a/src/ShopBundle/Resources/config/routing.yml
+++ b/src/ShopBundle/Resources/config/routing.yml
@@ -1,3 +1,8 @@
 shop_homepage:
     path:     /hello/{name}
     defaults: { _controller: ShopBundle:Default:index }
+
+
+product:
+    resource: "@ShopBundle/Controller/"
+    type: annotation
