--- a/src/ShopBundle/Resources/config/routing.yml
+++ b/src/ShopBundle/Resources/config/routing.yml
@@ -6,3 +6,14 @@ shop_homepage:
 product:
     resource: "@ShopBundle/Controller/"
     type: annotation
+
+
+login:
+    path: /login
+    defaults: { _controller: ShopBundle:Security:login }
+
+login_check:
+    path: /login_check
+
+logout:
+    path: /logout
