--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -16,17 +16,17 @@ security:
                 users:
                     admin: { password: adminpass, roles: ROLE_ADMIN}
         user_db:
-            entity: { class: ShopBundle:User, property: userName }
+            entity: { class: ShopBundle:User, property: username}
     firewalls:
         main:
             pattern: /.*
             form_login:
                 login_path: /login
                 check_path: /login_check
-                default_target_path: /
+                default_target_path: /user
             logout:
                 path: /logout
-                target: /
+                target: /login
             security: true
             anonymous: true
     access_control:
