--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,7 +23,7 @@ security:
             form_login:
                 login_path: /login
                 check_path: /login_check
-                default_target_path: /user
+                default_target_path: /product
             logout:
                 path: /logout
                 target: /login
