--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,7 +4,8 @@ security:
     # http://symfony.com/doc/current/book/security.html#encoding-the-user-s-password
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
-        Custom\ShopBundle\Entity\User: bcrypt
+        Custom\ShopBundle\Entity\User:
+            algorithm: bcrypt
     role_hierarchy:
         ROLE_ADMIN: [ROLE_USER]
     providers:
